# flask-security-fork

./: .editorconfig  .gitignore  CHANGES  README.rst  babel.ini  pyproject.toml  pytest.ini  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: conf.py  configuration.rst  quickstart.rst
flask_security/: __init__.py  core.py  datastore.py  decorators.py  forms.py  utils.py  views.py
flask_security/translations/: messages.pot
flask_security/translations/ar/LC_MESSAGES/: messages.po
flask_security/translations/bg/LC_MESSAGES/: messages.po
flask_security/translations/ca/LC_MESSAGES/: messages.po
flask_security/translations/cs/LC_MESSAGES/: messages.po
flask_security/translations/da/LC_MESSAGES/: messages.po
flask_security/translations/da_DK/LC_MESSAGES/: messages.po
flask_security/translations/de/LC_MESSAGES/: messages.po
flask_security/translations/el/LC_MESSAGES/: messages.po
flask_security/translations/es/LC_MESSAGES/: messages.po
flask_security/translations/et/LC_MESSAGES/: messages.po
flask_security/translations/fa/LC_MESSAGES/: messages.po
flask_security/translations/fi/LC_MESSAGES/: messages.po
flask_security/translations/fr/LC_MESSAGES/: messages.po
flask_security/translations/hr/LC_MESSAGES/: messages.po
flask_security/translations/hu/LC_MESSAGES/: messages.po
flask_security/translations/it/LC_MESSAGES/: messages.po
flask_security/translations/ja/LC_MESSAGES/: messages.po
flask_security/translations/ka/LC_MESSAGES/: messages.po
flask_security/translations/ko/LC_MESSAGES/: messages.po
flask_security/translations/lt/LC_MESSAGES/: messages.po
flask_security/translations/no/LC_MESSAGES/: messages.po
flask_security/translations/pl/LC_MESSAGES/: messages.po
flask_security/translations/pt/LC_MESSAGES/: messages.po
flask_security/translations/ro/LC_MESSAGES/: messages.po
flask_security/translations/ru/LC_MESSAGES/: messages.po
flask_security/translations/sk/LC_MESSAGES/: messages.po
flask_security/translations/sv/LC_MESSAGES/: messages.po
flask_security/translations/tr/LC_MESSAGES/: messages.po
flask_security/translations/uk/LC_MESSAGES/: messages.po
flask_security/translations/zh_CN/LC_MESSAGES/: messages.po
flask_security/translations/zh_TW/LC_MESSAGES/: messages.po
scripts/: release.py
tests/: conftest.py  test_common.py  test_configuration.py  test_confirmable.py  test_datastore.py  test_hashing.py  test_misc.py  test_passwordless.py  test_recoverable.py
