# SPDX-FileCopyrightText: 2022 CERN.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-FileCopyrightText: 2026 KTH Royal Institute of Technology.
# SPDX-License-Identifier: MIT

[project]
name = "Flask-Security-Invenio"
description = "Simple security for Flask apps."
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN/TU Wien/JRC", email = "info@inveniosoftware.org" },
]
keywords = [
  "flask",
  "security",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "email-validator>=1.0.5",
  "flask>=1.1.4",
  "flask-babel>=2.0.0",
  "flask-login>=0.4.1",
  "flask-mail>=0.9.1",
  "flask-principal>=0.4.0",
  "flask-wtf>=1.1.0",
  "itsdangerous>=2.0",
  "libpass>=1.9.0",
  "markupsafe>=2.1.5",
  "speaklater>=1.3",
  "zxcvbn>=4.4.28",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/flask-security-invenio"

[project.entry-points."invenio_i18n.translations"]
messages = "flask_security"

[project.optional-dependencies]
tests = [
  "bcrypt>=3.1.0,<5.0.0",
  "coverage>=5.3,<6",
  "flask-sphinx-themes>=1.0.2",
  "flask-sqlalchemy>=2.5.1",
  "mock>=1.3.0",
  "msgcheck>=2.9",
  "pytest-black-ng>=0.4.0",
  "pytest-cov>=2.10.1",
  "pytest-flask>=1.0.0",
  "pytest-isort>=1.2.0",
  "pytest-pycodestyle>=2.2.0",
  "pytest-pydocstyle>=2.2.0",
  "pytest>=6,<9",
  "sphinx>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "flask_security/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
  "/flask_security",
]

[tool.hatch.build.targets.sdist]
include = [
  "/flask_security",
]

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "flask_security/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "flask_security/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "flask_security/translations/messages.pot"
output_dir = "flask_security/translations/"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.jinja"
encoding = "utf-8"

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = "--black --isort --cov=flask_security --cov-report=term-missing --cache-clear"
testpaths = "tests flask_security"
live_server_scope = "module"
